; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_uengine.c_ustore_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_uengine.c_ustore_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USTORE_DATA_LOWER = common dso_local global i32 0, align 4
@USTORE_DATA_UPPER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @ustore_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ustore_write(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = ashr i32 %5, 20
  %7 = and i32 %6, 1048575
  %8 = call i64 @make_even_parity(i32 %7)
  %9 = trunc i64 %8 to i32
  %10 = shl i32 %9, 41
  %11 = load i32, i32* %4, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = and i32 %13, 1048575
  %15 = call i64 @make_even_parity(i32 %14)
  %16 = trunc i64 %15 to i32
  %17 = shl i32 %16, 40
  %18 = load i32, i32* %4, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @USTORE_DATA_LOWER, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @ixp2000_uengine_csr_write(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @USTORE_DATA_UPPER, align 4
  %26 = load i32, i32* %4, align 4
  %27 = ashr i32 %26, 32
  %28 = call i32 @ixp2000_uengine_csr_write(i32 %24, i32 %25, i32 %27)
  ret void
}

declare dso_local i64 @make_even_parity(i32) #1

declare dso_local i32 @ixp2000_uengine_csr_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
